--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
                     // Log songLibrary for inspection
                     console.log(songLibrary);
+                    console.log(albumLibrary);
                 })
                 .catch(error => {
                     console.error(`Error fetching data: ${error}`);
