--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Wiki v1</title> 
+    <title>Music Wiki v1a</title> 
 </head>
 <body>
-    <h1>Music Wiki v1</h1> 
+    <h1>Music Wiki v1a</h1> 
 
     <section id="songs">
         <h2>Songs</h2>
